source-folder 2/main/default/objects/Map_Error__c/fields/Mapping_Query__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Query__c</fullName>
    <description>This field is populated when an error occurs within the recordMap mapping component. The field displays the Apex query which was attempted, to retrieve the address field values. Questions? Tweet @SFMichaelHolt</description>
    <inlineHelpText>Shows the attempted Apex query when a user loads the recordMap component</inlineHelpText>
    <label>Mapping Query</label>
    <length>8192</length>
    <type>LongTextArea</type>
</CustomField>