source-folder 2/main/default/objects/Map_Error__c/fields/Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Record_ID__c</fullName>
    <description>The record on which the error occurred</description>
    <inlineHelpText>The record where this error occurred</inlineHelpText>
    <label>Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>